Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32737

Japanese text is not being displayed in QML unless a font that has direct support for it is used

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.1
    • 5.1.0 , 5.2.1, 5.3.0 Beta1
    • Quick: Other
    • None
    • Windows 7
    • 729775f9a1e8154513169917432309549a000efe

      Japanese text is not being displayed in QML unless a font that has direct support for it is used. This is specific to Windows because it is falling back to a bitmap font, if the line:

      renderType: Text.NativeRendering

      is added then it will display correctly. Attached is an example that reproduces this.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jolind Jorgen Lind
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            15 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes