Store the font's scalability in QFontEngine.

This is an enabler to fallback to native font rendering when using a
bitmap font in Qt Quick.

Task-number: QTBUG-32737
Change-Id: I6d841dd5ef54d78a00f7fab9d80e9c95ff7f7b98
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>